--- a/SimpleWeather.UWP/Controls/DetailItem.xaml
+++ b/SimpleWeather.UWP/Controls/DetailItem.xaml
@@ -55,7 +55,7 @@
                     Width="50"
                     Foreground="{ThemeResource IconPaintColorBrush}"
                     RenderTransformOrigin="0.5,0.5"
-                    UriSource="{x:Bind utils:WeatherUtils.GetWeatherIconURI(Details.Icon), Mode=OneWay}">
+                    UriSource="{x:Bind wim.GetWeatherIconURI(Details.Icon), Mode=OneWay}">
                     <BitmapIcon.RenderTransform>
                         <RotateTransform Angle="{x:Bind Details.IconRotation, Mode=OneWay}" />
                     </BitmapIcon.RenderTransform>
