--- a/SimpleWeather.UWP/Controls/BeaufortControl.xaml
+++ b/SimpleWeather.UWP/Controls/BeaufortControl.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:helpers="using:SimpleWeather.UWP.Helpers"
     xmlns:local="using:SimpleWeather.UWP.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
@@ -22,6 +23,7 @@
                 </ResourceDictionary>
             </ResourceDictionary.ThemeDictionaries>
             <SolidColorBrush x:Name="BeaufortPaintColorBrush" Color="{ThemeResource BeaufortPaintColor}" />
+            <helpers:IconForegroundConverter x:Key="iconForegroundConverter" />
         </ResourceDictionary>
     </UserControl.Resources>
 
@@ -36,11 +38,14 @@
                     Width="55"
                     Margin="20,10"
                     VerticalAlignment="Center"
-                    Foreground="{ThemeResource BeaufortPaintColorBrush}"
                     RelativePanel.Above="BeaufortProgressBar"
                     RelativePanel.AlignLeftWithPanel="True"
                     RelativePanel.AlignTopWithPanel="True"
-                    UriSource="{x:Bind wim.GetWeatherIconURI(ViewModel.Beaufort.Icon), Mode=OneWay}" />
+                    UriSource="{x:Bind wim.GetWeatherIconURI(ViewModel.Beaufort.Icon), Mode=OneWay}">
+                    <BitmapIcon.Foreground>
+                        <SolidColorBrush Color="{Binding ElementName=BeaufortIcon, Path=UriSource, Mode=OneWay, Converter={StaticResource iconForegroundConverter}, ConverterParameter={ThemeResource BeaufortPaintColor}}" />
+                    </BitmapIcon.Foreground>
+                </BitmapIcon>
                 <TextBlock
                     x:Name="BeaufortDescription"
                     Padding="5"
