--- a/SimpleWeather.UWP/Controls/DetailItem.xaml
+++ b/SimpleWeather.UWP/Controls/DetailItem.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:helpers="using:SimpleWeather.UWP.Helpers"
     xmlns:local="using:SimpleWeather.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:utils="using:SimpleWeather.Utils"
@@ -22,6 +23,7 @@
                 </ResourceDictionary>
             </ResourceDictionary.ThemeDictionaries>
             <SolidColorBrush x:Name="IconPaintColorBrush" Color="{ThemeResource IconPaintColor}" />
+            <helpers:IconForegroundConverter x:Key="iconForegroundConverter" />
         </ResourceDictionary>
     </UserControl.Resources>
 
@@ -52,10 +54,13 @@
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center">
                 <BitmapIcon
+                    x:Name="DetailIcon"
                     Width="50"
-                    Foreground="{ThemeResource IconPaintColorBrush}"
                     RenderTransformOrigin="0.5,0.5"
                     UriSource="{x:Bind wim.GetWeatherIconURI(Details.Icon), Mode=OneWay}">
+                    <BitmapIcon.Foreground>
+                        <SolidColorBrush Color="{Binding ElementName=DetailIcon, Path=UriSource, Mode=OneWay, Converter={StaticResource iconForegroundConverter}, ConverterParameter={ThemeResource IconPaintColor}}" />
+                    </BitmapIcon.Foreground>
                     <BitmapIcon.RenderTransform>
                         <RotateTransform Angle="{x:Bind Details.IconRotation, Mode=OneWay}" />
                     </BitmapIcon.RenderTransform>
