--- a/SimpleWeather.UWP/Controls/LocationPanel.xaml
+++ b/SimpleWeather.UWP/Controls/LocationPanel.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:helpers="using:SimpleWeather.UWP.Helpers"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     xmlns:toolkitControls="using:Microsoft.Toolkit.Uwp.UI.Controls"
@@ -28,6 +29,7 @@
                     <Color x:Key="DropShadowColorBrush">Gray</Color>
                 </ResourceDictionary>
             </ResourceDictionary.ThemeDictionaries>
+            <helpers:IconForegroundConverter x:Key="iconForegroundConverter" />
         </ResourceDictionary>
     </UserControl.Resources>
 
@@ -135,7 +137,7 @@
             HorizontalAlignment="Right"
             VerticalAlignment="Center"
             Orientation="Vertical">
-            <Grid HorizontalAlignment="Right">
+            <Grid HorizontalAlignment="Right" Visibility="{x:Bind ViewModel.HiTemp, Mode=OneWay, Converter={StaticResource stringVisibilityConverter}}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition />
@@ -158,7 +160,7 @@
                     Width="20"
                     UriSource="ms-appx:///SimpleWeather.Shared/Assets/WeatherIcons/png/wi-direction-up.png" />
             </Grid>
-            <Grid>
+            <Grid HorizontalAlignment="Right" Visibility="{x:Bind ViewModel.LoTemp, Mode=OneWay, Converter={StaticResource stringVisibilityConverter}}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition />
@@ -194,7 +196,11 @@
                 VerticalAlignment="Center"
                 Orientation="Horizontal"
                 Visibility="{x:Bind ViewModel.PoP, Mode=OneWay, Converter={StaticResource stringVisibilityConverter}}">
-                <BitmapIcon Width="25" UriSource="{x:Bind wim.GetWeatherIconURI(ViewModel.PoPIcon), Mode=OneWay}" />
+                <BitmapIcon Width="25" UriSource="{x:Bind wim.GetWeatherIconURI(ViewModel.PoPIcon), Mode=OneWay}">
+                    <BitmapIcon.Foreground>
+                        <SolidColorBrush Color="{x:Bind ViewModel.PoP, Mode=OneWay, Converter={StaticResource iconForegroundConverter}, ConverterParameter='#FFF'}" />
+                    </BitmapIcon.Foreground>
+                </BitmapIcon>
                 <toolkitControls:DropShadowPanel
                     BlurRadius="15.0"
                     ShadowOpacity="{ThemeResource DropShadowOpacity}"
@@ -218,6 +224,9 @@
                     Width="25"
                     RenderTransformOrigin="0.5,0.5"
                     UriSource="ms-appx:///SimpleWeather.Shared/Assets/WeatherIcons/png/wi-wind-direction.png">
+                    <BitmapIcon.Foreground>
+                        <SolidColorBrush Color="{x:Bind ViewModel.WindDirection, Mode=OneWay, Converter={StaticResource iconForegroundConverter}, ConverterParameter='#FFF'}" />
+                    </BitmapIcon.Foreground>
                     <BitmapIcon.RenderTransform>
                         <RotateTransform Angle="{x:Bind ViewModel.WindDirection, Mode=OneWay, FallbackValue='90'}" />
                     </BitmapIcon.RenderTransform>
