--- a/SimpleWeather.UWP/Controls/WeatherDetailPanel.xaml
+++ b/SimpleWeather.UWP/Controls/WeatherDetailPanel.xaml
@@ -4,6 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:SimpleWeather.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:helpers="using:SimpleWeather.UWP.Helpers"
     xmlns:local="using:SimpleWeather.UWP.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:toolkitControls="using:Microsoft.Toolkit.Uwp.UI.Controls"
@@ -15,11 +16,14 @@
             <ResourceDictionary.ThemeDictionaries>
                 <ResourceDictionary x:Key="Dark">
                     <SolidColorBrush x:Key="ExtraTextForegroundBrush" Color="{ThemeResource SimpleBlueLight}" />
+                    <Color x:Key="ForegroundColor">White</Color>
                 </ResourceDictionary>
                 <ResourceDictionary x:Key="Light">
                     <SolidColorBrush x:Key="ExtraTextForegroundBrush" Color="{ThemeResource SystemAccentColor}" />
+                    <Color x:Key="ForegroundColor">Black</Color>
                 </ResourceDictionary>
             </ResourceDictionary.ThemeDictionaries>
+            <helpers:IconForegroundConverter x:Key="iconForegroundConverter" />
             <!--  Default style for Windows.UI.Xaml.Controls.Primitives.ToggleButton  -->
             <Style x:Key="DetailPanelToggleButtonStyle" TargetType="ToggleButton">
                 <Setter Property="Background" Value="White" />
@@ -249,7 +253,11 @@
                     Height="50"
                     Margin="8,0"
                     VerticalAlignment="Center">
-                    <BitmapIcon x:Name="WeatherIcon" UriSource="{x:Bind wim.GetWeatherIconURI(ViewModel.Icon), Mode=OneWay}" />
+                    <BitmapIcon x:Name="WeatherIcon" UriSource="{x:Bind wim.GetWeatherIconURI(ViewModel.Icon), Mode=OneWay}">
+                        <BitmapIcon.Foreground>
+                            <SolidColorBrush Color="{Binding ElementName=WeatherIcon, Path=UriSource, Mode=OneWay, Converter={StaticResource iconForegroundConverter}, ConverterParameter={ThemeResource ForegroundColor}}" />
+                        </BitmapIcon.Foreground>
+                    </BitmapIcon>
                 </Viewbox>
                 <StackPanel
                     Grid.Column="1"
