--- a/SimpleWeather.UWP/Controls/Graphs/ForecastGraphPanel.xaml
+++ b/SimpleWeather.UWP/Controls/Graphs/ForecastGraphPanel.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="SimpleWeather.UWP.Controls.ForecastGraphPanel"
+    x:Class="SimpleWeather.UWP.Controls.Graphs.ForecastGraphPanel"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:Win1809Present="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,7)"
@@ -11,6 +11,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:toolkitControls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:uiControls="using:Microsoft.UI.Xaml.Controls"
+    d:DataContext="{d:DesignInstance Type=local:ForecastGraphViewModel}"
     d:DesignHeight="300"
     d:DesignWidth="400"
     mc:Ignorable="d">
@@ -306,145 +307,18 @@
             Click="RightButton_Click"
             IsEnabled="{x:Bind CanScrollToEnd, Mode=OneWay}"
             Style="{ThemeResource RightArrowButton}" />
-        <StackPanel Grid.Column="1" Orientation="Vertical">
-            <StackPanel
-                Margin="0,20"
-                HorizontalAlignment="Right"
-                Orientation="Horizontal">
-                <ToggleButton
-                    x:Name="TempToggleButton"
-                    Margin="5,0"
-                    Padding="4"
-                    Style="{ThemeResource ToggleButtonNoDisableRevealStyle}"
-                    Tag="Temp">
-                    <ToggleButton.Content>
-                        <StackPanel Orientation="Horizontal">
-                            <BitmapIcon
-                                Width="24"
-                                Height="24"
-                                Margin="0,0"
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"
-                                ShowAsMonochrome="True"
-                                UriSource="ms-appx:///SimpleWeather.Shared/Assets/WeatherIcons/dark/wi-thermometer.png" />
-                            <TextBlock
-                                x:Name="Label"
-                                x:Uid="Label_Temperature"
-                                Margin="4,0,0,0"
-                                VerticalAlignment="Center"
-                                FontSize="14"
-                                Text="Temperature"
-                                TextLineBounds="Tight" />
-                        </StackPanel>
-                    </ToggleButton.Content>
-                </ToggleButton>
-                <ToggleButton
-                    x:Name="WindToggleButton"
-                    Margin="5,0"
-                    Padding="4"
-                    Style="{ThemeResource ToggleButtonNoDisableRevealStyle}"
-                    Tag="Wind">
-                    <ToggleButton.Content>
-                        <StackPanel Orientation="Horizontal">
-                            <BitmapIcon
-                                Width="24"
-                                Height="24"
-                                Margin="4,0"
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"
-                                ShowAsMonochrome="True"
-                                UriSource="ms-appx:///SimpleWeather.Shared/Assets/WeatherIcons/dark/wi-strong-wind.png" />
-                            <TextBlock
-                                x:Uid="Label_Wind"
-                                Margin="4,0,0,0"
-                                VerticalAlignment="Center"
-                                FontSize="14"
-                                Text="Wind"
-                                TextLineBounds="Tight"
-                                Visibility="{Binding ElementName=Label, Path=Visibility, Mode=OneWay}" />
-                        </StackPanel>
-                    </ToggleButton.Content>
-                </ToggleButton>
-                <ToggleButton
-                    x:Name="RainToggleButton"
-                    Margin="5,0"
-                    Padding="4"
-                    Style="{ThemeResource ToggleButtonNoDisableRevealStyle}"
-                    Tag="Rain">
-                    <ToggleButton.Content>
-                        <StackPanel Orientation="Horizontal">
-                            <BitmapIcon
-                                Width="18"
-                                Height="24"
-                                Margin="4,0"
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"
-                                ShowAsMonochrome="True"
-                                UriSource="ms-appx:///SimpleWeather.Shared/Assets/WeatherIcons/dark/wi-raindrop.png" />
-                            <TextBlock
-                                x:Uid="Label_Precipitation"
-                                Margin="4,0,0,0"
-                                VerticalAlignment="Center"
-                                FontSize="14"
-                                Text="Precipitation"
-                                TextLineBounds="Tight"
-                                Visibility="{Binding ElementName=Label, Path=Visibility, Mode=OneWay}" />
-                        </StackPanel>
-                    </ToggleButton.Content>
-                </ToggleButton>
-            </StackPanel>
-            <Grid HorizontalAlignment="Stretch">
-                <graphs:LineView
-                    x:Name="LineGraphView"
-                    Height="275"
-                    DrawDataLabels="True"
-                    DrawDotLine="True"
-                    DrawDotPoints="True"
-                    DrawGraphBackground="True"
-                    DrawGridLines="True"
-                    DrawIconLabels="True"
-                    ItemWidthChanged="GraphView_ItemWidthChanged"
-                    Loaded="GraphView_Loaded"
-                    ViewChanged="GraphView_ViewChanged"
-                    Visibility="Visible" />
-                <graphs:RangeBarGraphView
-                    x:Name="BarChartView"
-                    Height="275"
-                    DrawDataLabels="True"
-                    DrawIconLabels="True"
-                    ItemWidthChanged="GraphView_ItemWidthChanged"
-                    Loaded="GraphView_Loaded"
-                    ViewChanged="GraphView_ViewChanged"
-                    Visibility="Collapsed" />
-            </Grid>
-            <VisualStateManager.VisualStateGroups>
-                <VisualStateGroup x:Name="WidthStates">
-                    <VisualState x:Name="Large">
-                        <VisualState.StateTriggers>
-                            <AdaptiveTrigger MinWindowWidth="1007" />
-                        </VisualState.StateTriggers>
-                        <VisualState.Setters>
-                            <Setter Target="Label.Visibility" Value="Visible" />
-                        </VisualState.Setters>
-                    </VisualState>
-                    <VisualState x:Name="Medium">
-                        <VisualState.StateTriggers>
-                            <AdaptiveTrigger MinWindowWidth="641" />
-                        </VisualState.StateTriggers>
-                        <VisualState.Setters>
-                            <Setter Target="Label.Visibility" Value="Visible" />
-                        </VisualState.Setters>
-                    </VisualState>
-                    <VisualState x:Name="Mobile">
-                        <VisualState.StateTriggers>
-                            <AdaptiveTrigger MinWindowWidth="0" />
-                        </VisualState.StateTriggers>
-                        <VisualState.Setters>
-                            <Setter Target="Label.Visibility" Value="Collapsed" />
-                        </VisualState.Setters>
-                    </VisualState>
-                </VisualStateGroup>
-            </VisualStateManager.VisualStateGroups>
-        </StackPanel>
+        <graphs:LineView
+            x:Name="LineGraphView"
+            Grid.Column="1"
+            Height="275"
+            DrawDataLabels="True"
+            DrawDotLine="True"
+            DrawDotPoints="True"
+            DrawGraphBackground="True"
+            DrawGridLines="True"
+            DrawIconLabels="True"
+            ItemWidthChanged="GraphView_ItemWidthChanged"
+            Loaded="GraphView_Loaded"
+            ViewChanged="GraphView_ViewChanged" />
     </Grid>
 </UserControl>
