--- a/SimpleWeather.UWP/Main/WeatherNow.xaml
+++ b/SimpleWeather.UWP/Main/WeatherNow.xaml
@@ -4,6 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:SimpleWeather.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:graphs="using:SimpleWeather.UWP.Controls.Graphs"
     xmlns:helpers="using:SimpleWeather.UWP.Helpers"
     xmlns:local="using:SimpleWeather.UWP.Main"
     xmlns:localcontrols="using:SimpleWeather.UWP.Controls"
@@ -202,7 +203,8 @@
             x:Name="MainViewer"
             x:Load="{x:Bind WeatherView.Location, Mode=OneWay, Converter={StaticResource stringBooleanConverter}}"
             SizeChanged="MainGrid_SizeChanged"
-            VerticalScrollMode="Auto">
+            VerticalScrollMode="Auto"
+            Visibility="{x:Bind WeatherView.Location, Mode=OneWay, Converter={StaticResource stringVisibilityConverter}}">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
@@ -223,6 +225,8 @@
                     x:Load="{x:Bind uwpUtils:FeatureSettings.BackgroundImage, Mode=OneWay}"
                     CachingStrategy="Custom"
                     Foreground="White"
+                    ImageExFailed="BackgroundOverlay_ImageExFailed"
+                    ImageExOpened="BackgroundOverlay_ImageExOpened"
                     IsCacheEnabled="True"
                     Source="{x:Bind WeatherView.ImageData.ImageUri, Mode=OneWay}"
                     Stretch="UniformToFill"
@@ -234,7 +238,7 @@
                     Grid.RowSpan="5"
                     Height="{Binding ElementName=BackgroundOverlay, Path=Height, Mode=OneWay}"
                     x:Load="{x:Bind uwpUtils:FeatureSettings.BackgroundImage, Mode=OneWay}"
-                    Visibility="{x:Bind uwpUtils:FeatureSettings.BackgroundImage, Mode=OneWay, Converter={StaticResource booleanToVisibilityConverter}}">
+                    Visibility="Collapsed">
                     <Grid.Background>
                         <LinearGradientBrush SpreadMethod="Pad" StartPoint="0.5,0" EndPoint="0.5,1">
                             <LinearGradientBrush.GradientStops>
@@ -249,14 +253,14 @@
                     Margin="0,10,0,5"
                     HorizontalAlignment="Center"
                     BlurRadius="15.0"
-                    ShadowOpacity="{x:Bind uwpUtils:FeatureSettings.BackgroundImage, Converter={StaticResource boolToBinaryValueConverter}}">
+                    ShadowOpacity="{x:Bind ControlShadowOpacity, Mode=OneWay}">
                     <TextBlock
                         Name="Location"
+                        d:Text="New York, NY"
                         FontSize="28"
                         FontWeight="Medium"
                         MaxLines="2"
-                        RequestedTheme="{x:Bind uwpUtils:FeatureSettings.BackgroundImage, Converter={StaticResource boolToThemeConverter}}"
-                        Text="{Binding Location, FallbackValue='New York, NY', Mode=OneWay}"
+                        Text="{x:Bind WeatherView.Location, Mode=OneWay}"
                         TextAlignment="Center"
                         TextTrimming="CharacterEllipsis"
                         TextWrapping="WrapWholeWords" />
@@ -265,14 +269,14 @@
                     Grid.Row="1"
                     HorizontalAlignment="Center"
                     BlurRadius="15.0"
-                    ShadowOpacity="{x:Bind uwpUtils:FeatureSettings.BackgroundImage, Converter={StaticResource boolToBinaryValueConverter}}">
+                    ShadowOpacity="{x:Bind ControlShadowOpacity, Mode=OneWay}">
                     <TextBlock
                         Name="UpdateDate"
                         Padding="2"
+                        d:Text="Updated on 11:12 PM"
                         FontSize="12"
                         FontWeight="Medium"
-                        RequestedTheme="{x:Bind uwpUtils:FeatureSettings.BackgroundImage, Converter={StaticResource boolToThemeConverter}}"
-                        Text="{Binding UpdateDate, FallbackValue='Updated on 11:12 PM', Mode=OneWay}" />
+                        Text="{x:Bind WeatherView.UpdateDate, Mode=OneWay}" />
                 </toolkitControls:DropShadowPanel>
                 <Button
                     x:Name="AlertButton"
@@ -287,8 +291,7 @@
                     Grid.Row="4"
                     MinHeight="108"
                     MaxWidth="1280"
-                    Padding="16,0"
-                    RequestedTheme="{x:Bind uwpUtils:FeatureSettings.BackgroundImage, Converter={StaticResource boolToThemeConverter}}">
+                    Padding="16,0">
                     <toolkitControls:DropShadowPanel
                         x:Name="CurTempPanel"
                         Margin="0,15"
@@ -297,15 +300,16 @@
                         BlurRadius="15.0"
                         RelativePanel.Above="CurConditionPanel"
                         RelativePanel.AlignTopWithPanel="True"
-                        ShadowOpacity="{x:Bind uwpUtils:FeatureSettings.BackgroundImage, Converter={StaticResource boolToBinaryValueConverter}}">
+                        ShadowOpacity="{x:Bind ControlShadowOpacity, Mode=OneWay}">
                         <TextBlock
                             Name="CurTemp"
+                            d:Text="70°F"
                             FontSize="84"
                             FontWeight="Light"
-                            Text="{Binding CurTemp, FallbackValue='70°F', Mode=OneWay}"
+                            Text="{x:Bind WeatherView.CurTemp, Mode=OneWay}"
                             TextLineBounds="Tight">
                             <TextBlock.Foreground>
-                                <SolidColorBrush Color="{x:Bind WeatherView.CurTemp, Mode=OneWay, Converter={StaticResource tempToColorTempConverter}}" />
+                                <SolidColorBrush d:Color="OrangeRed" Color="{x:Bind WeatherView.CurTemp, Mode=OneWay, Converter={StaticResource tempToColorTempConverter}}" />
                             </TextBlock.Foreground>
                         </TextBlock>
                     </toolkitControls:DropShadowPanel>
@@ -318,18 +322,20 @@
                         RelativePanel.AlignBottomWith="CurTempPanel"
                         RelativePanel.AlignTopWith="CurTempPanel"
                         RelativePanel.AlignVerticalCenterWith="CurTempPanel"
-                        RelativePanel.RightOf="CurTempPanel">
+                        RelativePanel.RightOf="CurTempPanel"
+                        Visibility="{x:Bind WeatherView.HiTemp, Mode=OneWay, Converter={StaticResource stringVisibilityConverter}}">
                         <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
                             <toolkitControls:DropShadowPanel
                                 HorizontalAlignment="Center"
                                 VerticalAlignment="Center"
                                 BlurRadius="15.0"
-                                ShadowOpacity="{x:Bind uwpUtils:FeatureSettings.BackgroundImage, Converter={StaticResource boolToBinaryValueConverter}}">
+                                ShadowOpacity="{x:Bind ControlShadowOpacity, Mode=OneWay}">
                                 <TextBlock
                                     Height="32"
                                     VerticalAlignment="Top"
+                                    d:Text="70°"
                                     FontSize="24"
-                                    Text="{Binding HiTemp, Mode=OneWay, FallbackValue='70°', TargetNullValue='&#x2022;'}" />
+                                    Text="{x:Bind WeatherView.HiTemp, Mode=OneWay, TargetNullValue='&#x2022;'}" />
                             </toolkitControls:DropShadowPanel>
                             <BitmapIcon
                                 Width="25"
@@ -341,8 +347,11 @@
                                 HorizontalAlignment="Center"
                                 VerticalAlignment="Center"
                                 BlurRadius="15.0"
-                                ShadowOpacity="{x:Bind uwpUtils:FeatureSettings.BackgroundImage, Converter={StaticResource boolToBinaryValueConverter}}">
-                                <TextBlock FontSize="24" Text="{Binding LoTemp, Mode=OneWay, FallbackValue='60°', TargetNullValue='&#x2022;'}" />
+                                ShadowOpacity="{x:Bind ControlShadowOpacity, Mode=OneWay}">
+                                <TextBlock
+                                    d:Text="60°"
+                                    FontSize="24"
+                                    Text="{x:Bind WeatherView.LoTemp, Mode=OneWay, TargetNullValue='&#x2022;'}" />
                             </toolkitControls:DropShadowPanel>
                             <BitmapIcon
                                 Width="25"
@@ -369,12 +378,13 @@
                         BlurRadius="15.0"
                         RelativePanel.Above="Attribution"
                         RelativePanel.AlignLeftWithPanel="True"
-                        ShadowOpacity="{x:Bind uwpUtils:FeatureSettings.BackgroundImage, Converter={StaticResource boolToBinaryValueConverter}}">
+                        ShadowOpacity="{x:Bind ControlShadowOpacity, Mode=OneWay}">
                         <TextBlock
                             Name="CurCondition"
                             Padding="5"
+                            d:Text="Sunny"
                             FontSize="24"
-                            Text="{Binding CurCondition, FallbackValue='Sunny', Mode=OneWay}" />
+                            Text="{x:Bind WeatherView.CurCondition, Mode=OneWay}" />
                     </toolkitControls:DropShadowPanel>
                     <HyperlinkButton
                         x:Name="Attribution"
@@ -392,7 +402,7 @@
                         <HyperlinkButton.Content>
                             <toolkitControls:DropShadowPanel BlurRadius="15.0" ShadowOpacity="1">
                                 <TextBlock>
-                                    <Span><Run x:Uid="Attrib_Prefix" Text="Photo by" /><Run Text=" " /><Run Text="{x:Bind WeatherView.ImageData.ArtistName, Mode=OneWay}" /><Run Text=" (" /><Run Text="{x:Bind WeatherView.ImageData.SiteName, Mode=OneWay}" /><Run Text=")" /></Span>
+                                    <Span><Run x:Uid="Attrib_Prefix" Text="Photo by" /><Run Text=" " /><Run d:Text="David" Text="{x:Bind WeatherView.ImageData.ArtistName, Mode=OneWay}" /><Run Text=" (" /><Run d:Text="Unsplash" Text="{x:Bind WeatherView.ImageData.SiteName, Mode=OneWay}" /><Run Text=")" /></Span>
                                 </TextBlock>
                             </toolkitControls:DropShadowPanel>
                         </HyperlinkButton.Content>
@@ -406,7 +416,7 @@
                         Name="ForecastPanel"
                         Margin="0,0,0,25"
                         x:Load="{x:Bind uwpUtils:FeatureSettings.Forecast, Mode=OneWay}"
-                        Visibility="{x:Bind ForecastView.Forecasts, Mode=OneWay, Converter={StaticResource collectionVisibilityConverter}}">
+                        Visibility="{x:Bind ForecastView.ForecastGraphData, Mode=OneWay, Converter={StaticResource stringVisibilityConverter}}">
                         <Border Style="{ThemeResource Divider}" />
                         <toolkitControls:HeaderedContentControl
                             x:Uid="Label_Forecast"
@@ -414,18 +424,17 @@
                             VerticalContentAlignment="Stretch"
                             Header="Forecast"
                             Style="{ThemeResource SectionLabelStyle}">
-                            <localcontrols:ForecastGraphPanel
+                            <graphs:RangeBarGraphPanel
                                 x:Name="ForecastGraphPanel"
-                                Grid.Column="1"
-                                Forecasts="{x:Bind ForecastView.Forecasts, Mode=OneWay}"
-                                GraphViewTapped="LineView_Tapped" />
+                                ForecastData="{x:Bind ForecastView.ForecastGraphData, Mode=OneWay}"
+                                GraphViewTapped="ForecastGraphPanel_Tapped" />
                         </toolkitControls:HeaderedContentControl>
                     </StackPanel>
                     <StackPanel
                         Name="HourlyForecastPanel"
                         Margin="0,0,0,25"
                         x:Load="{x:Bind uwpUtils:FeatureSettings.HourlyForecast, Mode=OneWay}"
-                        Visibility="{x:Bind ForecastView.HourlyForecasts, Mode=OneWay, Converter={StaticResource collectionVisibilityConverter}}">
+                        Visibility="{x:Bind ForecastView.HourlyForecastData, Mode=OneWay, Converter={StaticResource collectionVisibilityConverter}}">
                         <Border Style="{ThemeResource Divider}" />
                         <toolkitControls:HeaderedContentControl
                             x:Uid="Label_Hourly"
@@ -433,11 +442,24 @@
                             VerticalContentAlignment="Stretch"
                             Header="Hourly"
                             Style="{ThemeResource SectionLabelStyle}">
-                            <localcontrols:ForecastGraphPanel
-                                x:Name="HourlyGraphPanel"
-                                Grid.Column="1"
-                                Forecasts="{x:Bind ForecastView.HourlyForecasts, Mode=OneWay}"
-                                GraphViewTapped="LineView_Tapped" />
+                            <localcontrols:HourlyForecastItemPanel
+                                x:Name="HourlyForecastControl"
+                                ForecastData="{x:Bind ForecastView.HourlyForecastData, Mode=OneWay}"
+                                ItemClick="HourlyForecastControl_ItemClick" />
+                        </toolkitControls:HeaderedContentControl>
+                        <toolkitControls:HeaderedContentControl
+                            x:Name="PrecipitationGraphPanel"
+                            x:Load="{x:Bind ForecastView.PrecipitationGraphData, Mode=OneWay, Converter={StaticResource stringBooleanConverter}}"
+                            Visibility="{x:Bind ForecastView.PrecipitationGraphData, Mode=OneWay, Converter={StaticResource stringVisibilityConverter}}">
+                            <toolkitControls:HeaderedContentControl.Header>
+                                <TextBlock
+                                    x:Uid="Label_Precipitation"
+                                    Padding="15,10"
+                                    FontSize="16"
+                                    FontWeight="SemiBold"
+                                    Text="Precipitation" />
+                            </toolkitControls:HeaderedContentControl.Header>
+                            <graphs:ForecastGraphPanel GraphData="{x:Bind ForecastView.PrecipitationGraphData, Mode=OneWay}" GraphViewTapped="ForecastGraphPanel_GraphViewTapped" />
                         </toolkitControls:HeaderedContentControl>
                     </StackPanel>
                     <StackPanel
